deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goravel-mine
  namespace: goravel-mine
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  rules:
    - host: admin.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goravel-mine
                port:
                  name: http
  tls:
    - hosts:
        - admin.example.com
      secretName: goravel-mine-tls
